# gl-pathtracer

./: CMakeLists.txt  README.md
shaders/: pathtracer.comp  quad.frag  quad.vert
src/: CMakeLists.txt  main.cpp  pathtracer.cpp  pathtracer.hpp  scene.cpp  scene.hpp  shaders.hpp  windowcontext.cpp  windowcontext.hpp
